// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryOption renders with USA print offer 1`] = `
<div id="deliveryOptionField"
     class="o-forms-field ncf__delivery-option"
     role="group"
     aria-label="Delivery options"
>
  <span class="o-forms-input o-forms-input--radio-round">
    <label class="ncf__delivery-option__item"
           for="HD"
    >
      <input type="radio"
             id="HD"
             name="deliveryOption"
             value="HD"
             class="ncf__delivery-option__input"
             checked
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Hand delivery
        </span>
        <div class="ncf__delivery-option__description">
          Enjoy delivery of the newspaper daily to your home or office address.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="ML"
    >
      <input type="radio"
             id="ML"
             name="deliveryOption"
             value="HD"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Mail
        </span>
        <div class="ncf__delivery-option__description">
          We can only deliver the FT Weekend newspaper to your location by postal mail which means your delivery will arrive up to 5 business days after the date of publication and will not include the HTSI Magazine. We also fly the newspaper to your location which means delivery is subject to flight delays/cancellations outside the FT&#x27;s control. If you prefer to read the printed content on the day of publication, please proceed to subscribe to the FT ePaper - a digital replica of the print edition.
        </div>
      </span>
    </label>
  </span>
</div>
`;

exports[`DeliveryOption renders with a context of being single 1`] = `
<div id="deliveryOptionField"
     class="o-forms-field ncf__delivery-option ncf__delivery-option--single"
     role="group"
     aria-label="Delivery options"
>
  <span class="o-forms-input o-forms-input--radio-round">
    <label class="ncf__delivery-option__item"
           for="PV"
    >
      <input type="radio"
             id="PV"
             name="deliveryOption"
             value="PV"
             class="ncf__delivery-option__input"
             checked
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Paper vouchers
        </span>
        <div class="ncf__delivery-option__description">
          13-week voucher pack delivered quarterly and redeemable at retailers nationwide.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="HD"
    >
      <input type="radio"
             id="HD"
             name="deliveryOption"
             value="HD"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Hand delivery
        </span>
        <div class="ncf__delivery-option__description">
          Free delivery to your home or office before 7am.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="EV"
    >
      <input type="radio"
             id="EV"
             name="deliveryOption"
             value="EV"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Electronic vouchers
        </span>
        <div class="ncf__delivery-option__description">
          Delivered via email and card, redeemable at retailers nationwide.
        </div>
      </span>
    </label>
  </span>
</div>
`;

exports[`DeliveryOption renders with country CAN print offer HD and mailDelivery false 1`] = `
<div id="deliveryOptionField"
     class="o-forms-field ncf__delivery-option"
     role="group"
     aria-label="Delivery options"
>
  <span class="o-forms-input o-forms-input--radio-round">
    <label class="ncf__delivery-option__item"
           for="HD"
    >
      <input type="radio"
             id="HD"
             name="deliveryOption"
             value="HD"
             class="ncf__delivery-option__input"
             checked
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Hand delivery
        </span>
        <div class="ncf__delivery-option__description">
          Enjoy delivery of the newspaper daily to your home or office address.
        </div>
      </span>
    </label>
  </span>
</div>
`;

exports[`DeliveryOption renders with minimum mandatory props 1`] = `
<div id="deliveryOptionField"
     class="o-forms-field ncf__delivery-option"
     role="group"
     aria-label="Delivery options"
>
  <span class="o-forms-input o-forms-input--radio-round">
    <label class="ncf__delivery-option__item"
           for="PV"
    >
      <input type="radio"
             id="PV"
             name="deliveryOption"
             value="PV"
             class="ncf__delivery-option__input"
             checked
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Paper vouchers
        </span>
        <div class="ncf__delivery-option__description">
          13-week voucher pack delivered quarterly and redeemable at retailers nationwide.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="HD"
    >
      <input type="radio"
             id="HD"
             name="deliveryOption"
             value="HD"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Hand delivery
        </span>
        <div class="ncf__delivery-option__description">
          Free delivery to your home or office before 7am.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="EV"
    >
      <input type="radio"
             id="EV"
             name="deliveryOption"
             value="EV"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Electronic vouchers
        </span>
        <div class="ncf__delivery-option__description">
          Delivered via email and card, redeemable at retailers nationwide.
        </div>
      </span>
    </label>
  </span>
</div>
`;

exports[`DeliveryOption renders without unrecognised delivery options 1`] = `
<div id="deliveryOptionField"
     class="o-forms-field ncf__delivery-option"
     role="group"
     aria-label="Delivery options"
>
  <span class="o-forms-input o-forms-input--radio-round">
    <label class="ncf__delivery-option__item"
           for="PV"
    >
      <input type="radio"
             id="PV"
             name="deliveryOption"
             value="PV"
             class="ncf__delivery-option__input"
             checked
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Paper vouchers
        </span>
        <div class="ncf__delivery-option__description">
          13-week voucher pack delivered quarterly and redeemable at retailers nationwide.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="HD"
    >
      <input type="radio"
             id="HD"
             name="deliveryOption"
             value="HD"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Hand delivery
        </span>
        <div class="ncf__delivery-option__description">
          Free delivery to your home or office before 7am.
        </div>
      </span>
    </label>
    <label class="ncf__delivery-option__item"
           for="EV"
    >
      <input type="radio"
             id="EV"
             name="deliveryOption"
             value="EV"
             class="ncf__delivery-option__input"
      >
      <span class="o-forms-input__label ncf__delivery-option__label">
        <span class="ncf__delivery-option__title o-forms-title__main">
          Electronic vouchers
        </span>
        <div class="ncf__delivery-option__description">
          Delivered via email and card, redeemable at retailers nationwide.
        </div>
      </span>
    </label>
  </span>
</div>
`;
